@@ -1,5 +1,6 @@
 Update on Oct 27, 2020:
 - add shellcheck (if you want to do coding style checkes on bash).
+- upgrade to composer 2.
 
 
 Update on May 11, 2020:
